--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
     "expres": "^0.0.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
